fixed nowrap spacing on query

--- a/final/css/style.css
+++ b/final/css/style.css
@@ -472,6 +472,9 @@ footer > p.text-center {
     iframe {
         width: 80%;
     }
+    .nowrap {
+        white-space: unset;
+    }
 }
 
 @media screen and (max-width: 576px) {
